Style and content updates

--- a/about.html
+++ b/about.html
@@ -8,7 +8,9 @@
   </head>
 
   <div class="header">
-    <h2>&#x2312;(•ㅅ•)&#x2312; Lauren Kung &#x2312;(•ㅅ•)&#x2312;</h2>
+    <a class="title" href="./index.html">
+      <span class="h2" id='name'>&#x2312;(•ㅅ•)&#x2312; Lauren Kung &#x2312;(•ㅅ•)&#x2312;</span>
+    </a>
     [<a href="./index.html">Projects</a>]
     [<b>About</b>]
     [<a href="./lauren_kung_resume.pdf" target="_blank">Resume</a>]
@@ -16,9 +18,13 @@
   </div>
 
   <div class="content">
+    <br>
     Hi! My name is Lauren, and I am an artist and programmer in the interdisciplinary Computer Science and Arts program at Carnegie Mellon University.
     <br><br>
-    Currently, I am interested in DIY culture, especially its anticapitalist, feminist, and queer implications. I live in Dallas, TX and Pittsburgh, PA.
+    I am interested in the intersections of robotics, ubiquitous computing, and interactive sculpture. I enjoy DIY culture and all things handmade.
+    <!-- Currently, I am interested in DIY culture, especially its anticapitalist, feminist, and queer implications. I live in Dallas, TX and Pittsburgh, PA. -->
+    <br>
+    <br>
   </div>
 
   <div class="footer">
@@ -30,9 +36,9 @@
     Around the web: <a href="https://twitter.com/laurenkungaroo" target="_blank">Twitter</a>, <a href="https://www.linkedin.com/in/laurenku/">LinkedIn</a>, <a href="https://github.com/laurenku">GitHub</a>. -->
     <br>
     Get in touch via email: <i>laurenku@andrew.cmu.edu</i>
+    <!-- <br>
     <br>
-    <br>
-    <i>Last updated September 25, 2022 by Lauren Kung.</i>
+    <i>Last updated September 25, 2022 by Lauren Kung.</i> -->
 
   </div>
   
