--- a/colorfulsoundscapes.html
+++ b/colorfulsoundscapes.html
@@ -9,17 +9,19 @@
 
   <script>
     var nameCount = 0;
-    names = ['&#175;&#175;(•ㅅ•)&#175;&#175; Lauren Kung &#175;&#175;(•ㅅ•)&#175;&#175;', '&#47;(•ㅅ•)&#92;&nbsp;&nbsp;&nbsp; Lauren Kung &nbsp;&nbsp;&nbsp;&#47;(•ㅅ•)&#92;', '(•ㅅ•)&nbsp;&nbsp;&nbsp;&nbsp; Lauren Kung &nbsp;&nbsp;&nbsp;&nbsp;(•ㅅ•)'];
+    names = ['&#175;&#175;(•ㅅ•)&#175;&#175; Lauren Kung &#175;&#175;(•ㅅ•)&#175;&#175;', '&#47;(•ㅅ•)&#92;&nbsp;&nbsp;&nbsp; Lauren Kung &nbsp;&nbsp;&nbsp;&#47;(•ㅅ•)&#92;'];
     const interval = setInterval(function() {
       document.getElementById('name').innerHTML = names[nameCount%names.length];
       nameCount++;
-    }, 1000);
+    }, 5000);
   </script>
 
 
 
   <div class = "header">
-	  <h2 id='name'>&#175;&#175;(•ㅅ•)&#175;&#175; Lauren Kung &#175;&#175;(•ㅅ•)&#175;&#175;</h2>
+  	<a class="title" href="./index.html">
+	    <span class="h2" id='name'>&#175;&#175;(•ㅅ•)&#175;&#175; Lauren Kung &#175;&#175;(•ㅅ•)&#175;&#175;</span>
+	  </a>
 		[<a href="./index.html">Projects</a>]
 		[<a href="./about.html">About</a>]
 		[<a href="./lauren_kung_resume.pdf" target="_blank">Resume</a>]
@@ -29,7 +31,7 @@
 	<div class="content" style="text-align:left">
 		<span class="h1">Colorful Soundscapes</span>
 		
-		Colorful Soundscapes is a p5.js app that leverages the new Soli radar sensor in the Google Pixel 4 phone, which allows users to interact with their phone touch free. The purpose of Colorful Soundscapes is to enhance the user's environment. The app has storm, summer night, ocean, forest, library, party, and driving soundscapes that are interactive with the reach and swipe (up, down, right, left) interactions. The UI is a solid color associated with the soundscape currently playing, allowing the phone to be used as a colorful lamp.
+		<i>Colorful Soundscapes</i> is a p5.js app that leverages the new Soli radar sensor in the Google Pixel 4 phone, which allows users to interact with their phone touch free. The purpose of Colorful Soundscapes is to enhance the user's environment. The app has storm, summer night, ocean, forest, library, party, and driving soundscapes that are interactive with the reach and swipe (up, down, right, left) interactions. The UI is a solid color associated with the soundscape currently playing, allowing the phone to be used as a colorful lamp.
 		<br><br>
 		This app is hosted on Glitch. <a href="https://glitch.com/edit/#!/colorful-soundscapes" target="_blank">See the project on Glitch</a>.
 		
@@ -70,8 +72,8 @@
 		Around the web: <a href="https://twitter.com/laurenkungaroo" target="_blank">Twitter</a>, <a href="https://www.linkedin.com/in/laurenku/">LinkedIn</a>, <a href="https://github.com/laurenku">GitHub</a>. -->
 		<br>
 		Get in touch via email: <i>laurenku@andrew.cmu.edu</i>
+		<!-- <br>
 		<br>
-		<br>
-		<i>Last updated September 25, 2022 by Lauren Kung.</i>
+		<i>Last updated September 25, 2022 by Lauren Kung.</i> -->
 	</div>
 </html>
