--- a/eggdogextravaganza.html
+++ b/eggdogextravaganza.html
@@ -9,17 +9,19 @@
 
   <script>
     var nameCount = 0;
-    names = ['&#175;&#175;(•ㅅ•)&#175;&#175; Lauren Kung &#175;&#175;(•ㅅ•)&#175;&#175;', '&#47;(•ㅅ•)&#92;&nbsp;&nbsp;&nbsp; Lauren Kung &nbsp;&nbsp;&nbsp;&#47;(•ㅅ•)&#92;', '(•ㅅ•)&nbsp;&nbsp;&nbsp;&nbsp; Lauren Kung &nbsp;&nbsp;&nbsp;&nbsp;(•ㅅ•)'];
+    names = ['&#175;&#175;(•ㅅ•)&#175;&#175; Lauren Kung &#175;&#175;(•ㅅ•)&#175;&#175;', '&#47;(•ㅅ•)&#92;&nbsp;&nbsp;&nbsp; Lauren Kung &nbsp;&nbsp;&nbsp;&#47;(•ㅅ•)&#92;'];
     const interval = setInterval(function() {
       document.getElementById('name').innerHTML = names[nameCount%names.length];
       nameCount++;
-    }, 1000);
+    }, 5000);
   </script>
 
 
 
   <div class = "header">
-	  <h2 id='name'>&#175;&#175;(•ㅅ•)&#175;&#175; Lauren Kung &#175;&#175;(•ㅅ•)&#175;&#175;</h2>
+	  <a class="title" href="./index.html">
+	  	<span class="h2" id='name'>&#175;&#175;(•ㅅ•)&#175;&#175; Lauren Kung &#175;&#175;(•ㅅ•)&#175;&#175;</span>
+	  </a>
 		[<a href="./index.html">Projects</a>]
 		[<a href="./about.html">About</a>]
 		[<a href="./lauren_kung_resume.pdf" target="_blank">Resume</a>]
@@ -27,7 +29,19 @@
 	</div>
 
 	<div class="content" style="text-align:left">
-			This page is under construction.
+			<span class="h1">Eggdog Extravaganza for Emily and Angie</span>
+
+			I collaborated with Mikey Cao, Matthew Komar, Sarah Di, Joyce Zhang, and Rowan de Boer to create <i>Eggdog Extravaganza</i>, a Visual Novel game. Using the Ren’py game engine, I programmed the gameplay and animations in Python. I also illustrated 2D assets with Photoshop. This game is a birthday gift to our friends Emily Ngo and Angie Orbeta.
+
+			<br>
+			<br>
+			To play the game, download the <a href="https://github.com/laurenku/EAParty__/releases/tag/1.0" target="_blank">game release from Github</a>. Click on <strong>AEParty-1.0-pc.zip</strong> under <strong>Assets</strong> (117 MB). Once the ZIP file downloads, extract the files and click on <strong>AEParty.exe</strong>.
+
+			<hr>
+			<span class="h3">Video of Gameplay</span>
+			<iframe src="https://drive.google.com/file/d/1DHkcnLyRwgnOrw6an7xVHlSRI46LyuW0/preview" width="640" height="480" allow="autoplay" allowfullscreen></iframe>
+			
+
 			
 	</div>
 
@@ -41,8 +55,8 @@
 		Around the web: <a href="https://twitter.com/laurenkungaroo" target="_blank">Twitter</a>, <a href="https://www.linkedin.com/in/laurenku/">LinkedIn</a>, <a href="https://github.com/laurenku">GitHub</a>. -->
 		<br>
 		Get in touch via email: <i>laurenku@andrew.cmu.edu</i>
+		<!-- <br>
 		<br>
-		<br>
-		<i>Last updated September 25, 2022 by Lauren Kung.</i>
+		<i>Last updated September 25, 2022 by Lauren Kung.</i> -->
 	</div>
 </html>
