--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>🏠</title>
+		<title>Projects</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<link rel="stylesheet" href="./css/default.css">
 	</head>
@@ -24,17 +24,24 @@
 
   <script>
     var nameCount = 0;
-    names = ['&#175;&#175;(•ㅅ•)&#175;&#175; Lauren Kung &#175;&#175;(•ㅅ•)&#175;&#175;', '&#47;(•ㅅ•)&#92;&nbsp;&nbsp;&nbsp; Lauren Kung &nbsp;&nbsp;&nbsp;&#47;(•ㅅ•)&#92;', '(•ㅅ•)&nbsp;&nbsp;&nbsp;&nbsp; Lauren Kung &nbsp;&nbsp;&nbsp;&nbsp;(•ㅅ•)'];
+    // names = ['&#175;&#175;(•ㅅ•)&#175;&#175; Lauren Kung &#175;&#175;(•ㅅ•)&#175;&#175;', '&#47;(•ㅅ•)&#92;&nbsp;&nbsp;&nbsp; Lauren Kung &nbsp;&nbsp;&nbsp;&#47;(•ㅅ•)&#92;', '(•ㅅ•)&nbsp;&nbsp;&nbsp;&nbsp; Lauren Kung &nbsp;&nbsp;&nbsp;&nbsp;(•ㅅ•)'];
+    // names = ['&#175;&#175;(•ㅅ•)&#175;&#175; Lauren Kung &#175;&#175;(•ㅅ•)&#175;&#175;', '(•ㅅ•)&nbsp;&nbsp;&nbsp;&nbsp; Lauren Kung &nbsp;&nbsp;&nbsp;&nbsp;(•ㅅ•)'];
+    // names = ['&#175;&#175;(•ㅅ•)&nbsp;&nbsp;&nbsp;&nbsp; Lauren Kung &nbsp;&nbsp;&nbsp;&nbsp;(•ㅅ•)&nbsp;&nbsp;&nbsp;&nbsp;', '&#175;&#175;(•ㅅ•)&#175;&#175; Lauren Kung &nbsp;&nbsp;&nbsp;&nbsp;(•ㅅ•)&nbsp;&nbsp;&nbsp;&nbsp;', '&#175;&#175;(•ㅅ•)&#175;&#175; Lauren Kung &#175;&#175;(•ㅅ•)&nbsp;&nbsp;&nbsp;&nbsp;', '&#175;&#175;(•ㅅ•)&#175;&#175; Lauren Kung &#175;&#175;(•ㅅ•)&#175;&#175;', '&#175;&#175;(•ㅅ•)&#175;&#175; Lauren Kung &#175;&#175;(•ㅅ•)&nbsp;&nbsp;&nbsp;&nbsp;', '&#175;&#175;(•ㅅ•)&#175;&#175; Lauren Kung &nbsp;&nbsp;&nbsp;&nbsp;(•ㅅ•)&nbsp;&nbsp;&nbsp;&nbsp;', '&#175;&#175;(•ㅅ•)&nbsp;&nbsp;&nbsp;&nbsp; Lauren Kung &nbsp;&nbsp;&nbsp;&nbsp;(•ㅅ•)&nbsp;&nbsp;&nbsp;&nbsp;', '(•ㅅ•)&nbsp;&nbsp;&nbsp;&nbsp; Lauren Kung &nbsp;&nbsp;&nbsp;&nbsp;(•ㅅ•)'];
+    // names = ['&#175;&#175;(•ㅅ•)&nbsp;&nbsp;&nbsp;&nbsp; Lauren Kung &#175;&#175;(•ㅅ•)&nbsp;&nbsp;&nbsp;&nbsp;', '&nbsp;&nbsp;&nbsp;&nbsp;(•ㅅ•)&#175;&#175; Lauren Kung &nbsp;&nbsp;&nbsp;&nbsp;(•ㅅ•)&#175;&#175;'];
+    names = ['&#175;&#175;(•ㅅ•)&#175;&#175; Lauren Kung &#175;&#175;(•ㅅ•)&#175;&#175;', '&#47;(•ㅅ•)&#92;&nbsp;&nbsp;&nbsp; Lauren Kung &nbsp;&nbsp;&nbsp;&#47;(•ㅅ•)&#92;'];
+
     const interval = setInterval(function() {
       document.getElementById('name').innerHTML = names[nameCount%names.length];
       nameCount++;
-    }, 1000);
+    }, 5000);
   </script>
 
 
 
   <div class = "header">
-	  <h2 id='name'>&#175;&#175;(•ㅅ•)&#175;&#175; Lauren Kung &#175;&#175;(•ㅅ•)&#175;&#175;</h2>
+  	<a class="title" href="./index.html">
+	    <span class="h2" id='name'>&#175;&#175;(•ㅅ•)&#175;&#175; Lauren Kung &#175;&#175;(•ㅅ•)&#175;&#175;</span>
+	  </a>
 		[<b>Projects</b>]
 		[<a href="./about.html">About</a>]
 		[<a href="./lauren_kung_resume.pdf" target="_blank">Resume</a>]
@@ -42,31 +49,66 @@
 	</div>
 
 	<div class = "content">
+		<!-- <br>
 		<br>
+ -->
+		<a href="./enchantedobjects.html"><img src="./images/enchantedobjectsthumbnail.jpg" width=30%></a>
 		<br>
 		<a href="./enchantedobjects.html">Enchanted Objects</a>
 		<br>
+
+		<br>
+		<a href="./morningroutine.html"><img src="./images/morningroutinethumbnail.jpg" width=30%></a>
+		<br>
 		<a href="./morningroutine.html">Morning Routine</a>
+		<br>
+
+		<br>
+		<a href="./colorfulsoundscapes.html"><img src="./images/colorfulsoundscapesthumbnail.jpg" width=30%></a>
 		<br>
 		<a href="./colorfulsoundscapes.html">Colorful Soundscapes</a>
 		<br>
+
+		<br>
+		<a href="./snailmail.html"><img src="./images/snailmailthumbnail.jpg" width=30%></a>
+		<br>
 		<a href="./snailmail.html">Snail Mail</a>
+		<br>
+
+		<br>
+		<a href="./eggdogextravaganza.html"><img src="./images/eggdogthumbnail.jpg" width=30%></a>
 		<br>
 		<a href="./eggdogextravaganza.html">Eggdog Extravaganza</a>
 		<br>
+
+		<br>
+		<a href="./arpenguin.html"><img src="./images/arpenguinthumbnail.jpg" width=30%></a>
+		<br>
 		<a href="./arpenguin.html">AR Penguin</a>
+		<br>
+
+		<br>
+		<a href="./selfportrait.html"><img src="./images/selfportraitthumbnail.jpg" width=30%></a>
 		<br>
 		<a href="./selfportrait.html">Self portrait</a>
 		<br>
+
+		<br>
+		<a href="./leftovers.html"><img src="./images/leftovers1.jpg" width=30%></a>
+		<br>
 		<a href="./leftovers.html">Leftovers</a>
+		<br>
+
+		<br>
+		<a href="./images/myheartisinthework.mp4" target="_blank"><img src="./images/myheartisintheworkthumbnail.jpg" width=30%></a>
 		<br>
 		<a href="./images/myheartisinthework.mp4" target="_blank">My heart is in the work</a>
 		<br>
 		<br>
 		<br>
+		<!-- <br>
 		<br>
-		<br>
-		<br>
+		<br> -->
 	</div>
 		
 	<div class = "footer">
@@ -81,7 +123,7 @@
 		Get in touch via email: <i>laurenku@andrew.cmu.edu</i>
 		<br>
 		<br>
-		<i>Last updated September 25, 2022 by Lauren Kung.</i>
+		<i>Last updated October 26, 2022 by Lauren Kung.</i>
 	</div>
 
 </html>
