Enchanted Objects content and resume update

--- a/colorfulsoundscapes.html
+++ b/colorfulsoundscapes.html
@@ -31,7 +31,7 @@
 	<div class="content" style="text-align:left">
 		<span class="h1">Colorful Soundscapes</span>
 		
-		<i>Colorful Soundscapes</i> is a p5.js app that leverages the new Soli radar sensor in the Google Pixel 4 phone, which allows users to interact with their phone touch free. The purpose of Colorful Soundscapes is to enhance the user's environment. The app has storm, summer night, ocean, forest, library, party, and driving soundscapes that are interactive with the reach and swipe (up, down, right, left) interactions. The UI is a solid color associated with the soundscape currently playing, allowing the phone to be used as a colorful lamp.
+		<i>Colorful Soundscapes</i> is a p5.js app that leverages the new Soli radar sensor in the Google Pixel 4 phone, which allows users to interact with their phone touch free. The purpose of <i>Colorful Soundscapes</i> is to enhance the user's environment. The app has storm, summer night, ocean, forest, library, party, and driving soundscapes that are interactive with the reach and swipe (up, down, right, left) interactions. The UI is a solid color associated with the soundscape currently playing, allowing the phone to be used as a colorful lamp.
 		<br><br>
 		This app is hosted on Glitch. <a href="https://glitch.com/edit/#!/colorful-soundscapes" target="_blank">See the project on Glitch</a>.
 		
