--- a/enchantedobjects.html
+++ b/enchantedobjects.html
@@ -31,25 +31,30 @@
 	<div class="content" style="text-align:left">
 		<span class="h1">Enchanted Objects</span>
 
-		In <i>Enchanted Objects</i>, I’m interested in examining how technologies exist outside of a focus on efficiency, ergonomics, and simplicity and satisfy some fundamental human desires. Through the trials of reviving a Nabaztag (an ambient electronic device that was released on the market in 2006) I engage with a deliberate lack of functionality. Furthermore, I consider the dominant role of cuteness in consumer society by heightening and compromising the cuteness of my Nabaztag.
+		In <i>Enchanted Objects</i>, I’m interested in examining how technologies exist outside of a focus on efficiency, ergonomics, and simplicity and satisfy some fundamental human desires. Through the trials of reviving a Nabaztag (an ambient electronic device that was released on the market in 2006) I engaged with a deliberate lack of functionality. Furthermore, I augmented my Nabaztag with custom ears and a sweater to explore its propensity for play and new formal qualities.
 		<br><br>
 		This project was supported in part by funding from the Carnegie Mellon University <a href="https://www.cmu.edu/interdisciplinary/programs/" target="_blank">BXA Intercollege Degree Programs</a>.
 		<br><br>
-		Title inspired by <i>Enchanted Objects</i> by David L. Rose.
+		Title inspired by book <i>Enchanted Objects</i> by David L. Rose.
 
 		<hr>
+		I designed and sculpted a pair of ceramic, detachable ears. They are made out of clay and magnets, and have 3D printed connectors to interface with the Nabaztag.
+		<br><br>
 		<video src="./images/enchantedobjects.mp4" width=640 height=360 controls></video>
-		I designed and sculpted a pair of ceramic, detachable ears for my Nazbaztag. They were made out of clay and magnets, and they have 3D printed connectors to fit with the body.
+		<i>Recording of my interaction.</i>
 		
 		<br><br>
 		
 		<video src="./images/ears.mp4" width=640 height=360 controls></video>
+		<i>Demonstration of propensity for play and new forms.</i>
 
 		<hr>
-		
+		Most service robots have hard-plastic outer surfaces; however, therapeutic robots that provide emotional support through affective touch tend to utilize outer materials that are soft, cushioned, and pleasant to the touch. To explore skin texture as a design consideration for robots, I created a sweater for my Nabaztag and a stuffed animal using a soft material. I designed the patterns for both.
+
+		<br><br>
 		<div style="text-align:left;width: 400px;margin: 0 auto;">
 			<img src="./images/companionedited.jpg" width=100%>
-			Sweater and companion cut and hand sewn from the same thrifted sweater. Designed patterns...
+			<i>Companion and sweater cut and hand sewn from the same thrifted sweater.</i>
 		  <br><br>
 		  <!-- <i><span class="inline code">Mouseover</span> the images to see more of the sweater!</i>
 			<img src="./images/sweater1.jpg" id="openEars" width=100%>
@@ -68,7 +73,7 @@
 			<img src="./images/sweater1.gif" width=100%>
 			
 			<br>
-			Mouse over the image to use the zippers on the sweater! ... heart shaped .. allow for mobility and detachability of ears.
+			<i>Zippers allow for mobility and detachability of ears. When unzipped, the zippers make a heart shape.</i>
 			<br><br>
 			
 			<!-- <img src="./images/sweater3.jpg" id="turnEars" width=100%>
@@ -87,7 +92,7 @@
 			<img src="./images/sweater2.gif" width=100%>
 
 			<br>
-			allow for mobility
+			<i>Demonstration of mobility in sweater.</i>
 			<br><br>
 
 			<!-- <img src="./images/sweater4.jpg" id="turnBody" width=100%>
@@ -106,7 +111,7 @@
 			<img src="./images/sweater3.gif" width=100%>
 
 			<br>
-			The zipper on the back allows the sweater to be taken on and off, and makes it possible for the Rabbit to connect to power while the sweater is on.
+			<i>Zipper on the back allows sweater to be taken on and off, and makes it possible for the rabbit to connect to power while the sweater is on.</i>
 			<br>
 		</div>
 		
