--- a/enchantedobjects.html
+++ b/enchantedobjects.html
@@ -31,7 +31,7 @@
 	<div class="content" style="text-align:left">
 		<span class="h1">Enchanted Objects</span>
 
-		In <i>Enchanted Objects</i>, I’m interested in examining how technologies exist outside of a focus on efficiency, ergonomics, and simplicity and satisfy some fundamental human desires. Through the trials of reviving a Nabaztag (an ambient electronic device that was released on the market in 2006) I engaged with a deliberate lack of functionality. Furthermore, I augmented my Nabaztag with custom ears and a sweater to explore its propensity for play and new formal qualities.
+		In <i>Enchanted Objects</i>, I’m interested in examining how technologies exist outside of a focus on efficiency, ergonomics, and simplicity and satisfy some fundamental human desires. Through the trials of reviving a <a href="https://en.wikipedia.org/wiki/Nabaztag" target="_blank">Nabaztag</a> (an ambient electronic device that was released on the market in 2006) I engaged with a deliberate lack of functionality. Furthermore, I augmented my Nabaztag with custom ears and a sweater to explore its propensity for play and new formal qualities.
 		<br><br>
 		This project was supported in part by funding from the Carnegie Mellon University <a href="https://www.cmu.edu/interdisciplinary/programs/" target="_blank">BXA Intercollege Degree Programs</a>.
 		<br><br>
