--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     </a>
     [<a href="./index.html">Projects</a>]
     [<b>About</b>]
-    [<a href="./lauren_kung_resume.pdf" target="_blank">Resume</a>]
+    [<a href="./resume.html">Resume</a>]
     <hr>
   </div>
 
