--- a/eggdogextravaganza.html
+++ b/eggdogextravaganza.html
@@ -24,7 +24,7 @@
 	  </a>
 		[<a href="./index.html">Projects</a>]
 		[<a href="./about.html">About</a>]
-		[<a href="./lauren_kung_resume.pdf" target="_blank">Resume</a>]
+		[<a href="./resume.html">Resume</a>]
 		<hr>
 	</div>
 
