--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	  </a>
 		[<b>Projects</b>]
 		[<a href="./about.html">About</a>]
-		[<a href="./lauren_kung_resume.pdf" target="_blank">Resume</a>]
+		[<a href="./resume.html">Resume</a>]
 		<hr>
 	</div>
 
